--- a/src/test/resources/dev.properties
+++ b/src/test/resources/dev.properties
@@ -2,3 +2,4 @@ env.name=DevEnv
 
 testdata.instance.goalOfInstances=OneOne
 testdata.instance.numberOfInstances=2
+testdata.instance.totalEstimatedCostUsd=USD 1,538.52 per 1 month
