--- a/src/test/resources/qa.properties
+++ b/src/test/resources/qa.properties
@@ -2,3 +2,4 @@ env.name=TestEnv
 
 testdata.instance.goalOfInstances=Oneqaqa
 testdata.instance.numberOfInstances=4
+testdata.instance.totalEstimatedCostUsd=USD 3,077.04 per 1 month
